AspnetIdentityRoleBasedTutorial/wwwroot/css/site.css
html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 60px;
}

/*New Added CSS*/
html {
    font-size: 14px;
}

@media (min-width: 768px) {
    html {
        font-size: 16px;
    }
}

html {
    position: relative;
    min-height: 100%;
}

body {
    margin-bottom: 60px;
}

/*OnlineShopping*/

html {
    font-size: 14px;
}

@media (min-width: 768px) {
    html {
        font-size: 16px;
    }
}

html {
    position: relative;
    min-height: 100%;
}

body {
    margin-bottom: 60px;
}

/*OnlineShopping*/
html {
    scroll-behavior: smooth;
}

body {
    margin: 0;
    overflow-x: hidden;
    font-family: 'Titillium Web', sans-serif;
}

/* Thin Scrollbar */
:root {
    scrollbar-color: rgb(210,210,210) rgb(46,54,69) !important;
    scrollbar-width: thin !important;
}

.responsive {
    display: none;
}

em {
    font-style: normal;
    color: #eebf4d;
}

.title {
    font-size: 2em;
    display: block;
    font-family: 'Yusei Magic', sans-serif;
}

.sub-title {
    font-size: 1em;
    display: block;
    font-family: 'Titillium Web', sans-serif;
}

.btn1 {
    background: #1e1e1e;
    box-shadow: 0px 6px 16px -6px rgba(1,1,1,0.5);
    color: #fff;
    padding: 5px 10px;
    transition: 0.5s;
    border: 0;
    outline: none;
    display: block;
    width: 100px;
    text-align: center;
    border-radius: 20px;
    margin: 15px 0px;
}

    .btn1:hover {
        background: #fff;
        color: #000;
        border: 1px solid #1e1e1e;
    }

.btn2 {
    color: green;
    display: block;
}

.soldout {
    background: gray;
    box-shadow: 0px 6px 16px -6px rgba(1,1,1,0.5);
    color: #fff;
    padding: 5px 10px;
    transition: 0.5s;
    border: 0;
    outline: none;
    display: block;
    width: 100px;
    text-align: center;
    border-radius: 20px;
    margin: 15px 0px;
}

    .soldout:hover {
        background: none;
        border: none;
    }

a {
    text-decoration: none;
}

li {
    list-style: none;
}




/*HEADER*/
header {
    width: 100%;
    box-shadow: 0px 6px 16px -6px rgba(1,1,1,0.5);
    position: fixed;
    top: 0;
    z-index: 9;
}

.menu {
    width: 100%;
    background: #000;
    color: #fff;
    padding: 10px;
}

    .menu table {
        width: 100%;
    }

        .menu table td {
            width: 33%;
        }

    .menu .logo {
        width: 150px;
        height: 50px;
    }

    .menu input {
        padding: 10px;
        outline: none;
        border: 0;
        width: 80%;
    }

    .menu button {
        background: #eebf4d;
        color: #fff;
        padding: 10px;
        outline: none;
        border: 0;
    }

@media (max-width:900px) {
    .menu input {
        width: 60%;
    }
}

@media (max-width:600px) {
    .menu table td {
        width: 50%;
    }

        .menu table td:nth-child(3) {
            display: none;
        }

    .menu input {
        width: 65%;
    }
}


.menu span {
    float: right;
    margin-right: 15%;
}

.menu .dropdown {
    float: left;
    overflow: hidden;
}

    .menu .dropdown .dropbtn {
        font-size: 16px;
        border: none;
        outline: none;
        color: #fff;
        padding: 14px 16px;
        background-color: inherit;
        font-family: inherit;
        margin: 0;
    }

.value {
    text-align: center;
    padding: 2px;
    color: #fff;
    background: red;
    position: relative;
    top: -30px;
    left: 10px;
    z-index: 1;
    border-radius: 50%;
    width: 15px;
    height: 15px;
    font-size: 10px;
    transition: 0.5s;
}

.menu .navbar a:hover, .menu .dropdown:hover .dropbtn {
    background-color: #eebf4d;
}

.menu .dropdown .cart:hover {
    background: none;
    color: #eebf4d;
}

.dropdown-content {
    border-top: 2px solid #eebf4d;
    display: none;
    position: absolute;
    background-color: #fff;
    min-width: 260px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.cart-content {
    min-width: 180px;
    margin-bottom: 20px;
    position: absolute;
    right: 0;
}

    .cart-content ul:hover {
        background: #fff;
    }

    .cart-content ul {
        width: 100%;
        padding: 10px;
        border-bottom: 1px solid rgba(1,1,1,0.1);
    }

        .cart-content ul li {
            display: inline-block;
        }

            .cart-content ul li img {
                width: 100%;
                height: 50px;
            }

            .cart-content ul li:nth-child(1) {
                width: 30%;
            }

            .cart-content ul li:nth-child(2) {
                width: 50%;
            }

            .cart-content ul li:nth-child(3) {
                width: 10%;
            }

                .cart-content ul li:nth-child(3) i {
                    position: relative;
                    top: -15px;
                    transition: 0.5s;
                }

                    .cart-content ul li:nth-child(3) i:hover {
                        color: red;
                    }

            .cart-content ul li .title {
                font-size: 0.7em;
                display: inline-block;
            }

            .cart-content ul li .sub-title {
                font-size: 0.6em;
                color: gray;
                display: inline-block;
            }

.dropdown-content a {
    float: none;
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}

    .dropdown-content a:hover {
        background-color: #ddd;
    }

.dropdown:hover .dropdown-content {
    display: block;
}

.topnav {
    overflow-x: hidden;
    overflow-y: auto;
    background-color: #fff;
    padding: 0px 2%;
}
/* ... */

